--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,4 @@
-pip==20.1.1
+pip>=20.1.1
 bump2version==0.5.11
 wheel==0.34.2
 watchdog==0.9.0
@@ -7,4 +7,4 @@ tox==3.14.0
 coverage==4.5.4
 Sphinx==3.4.3
 twine==1.14.0
-numpy==1.19.4
+numpy>=1.19.4
